[package]
name = "muhtasib"
version = "0.1.0"
edition = "2021"

[dependencies]
bazaar = { path = "../bazaar" }
tokio = "1.15.0"
rust_decimal = "1.20.0"
rust_decimal_macros = "1.19.0"
log = "0.4.14"
dotenv = "0.15.0"
env_logger = "0.9.0"
tokio-util = "0.6.9"
futures-util = "0.3.19"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
uuid = "0.8.2"
chrono = "0.4.19"
axum = "0.4.4"
tower-http = { version = "0.2.0", features = ["cors", "fs"] }
sqlx = { version = "0.5.10", features = ["runtime-tokio-rustls", "postgres"] }
